"Done changes in the forget password"

--- a/src/app/pages/forget-password/forget-password.component.html
+++ b/src/app/pages/forget-password/forget-password.component.html
@@ -2,39 +2,56 @@
 <div class="container">
 <div class="form-wrapper">
 
+  <p-toast></p-toast>
+<!-- step 1: Email or Mobile Number -->
 <div class="p-fluid">
   <h2>Forgot Password</h2>
-  <form (ngSubmit)="onSubmit()">
-    
-    <form [formGroup]="forgotPasswordForm" (ngSubmit)="sendOtp()">
-      <div class="p-field">
-        <label for="emailOrMobile">Email or Mobile Number</label>
-        <input id="emailOrMobile" type="text" pInputText formControlName="emailOrMobile" />
-        <div *ngIf="forgotPasswordForm.get('emailOrMobile')?.invalid && 
-                     (forgotPasswordForm.get('emailOrMobile')?.dirty || 
-                      forgotPasswordForm.get('emailOrMobile')?.touched)">
+  <form [formGroup]="forgotPasswordForm" (ngSubmit)="onSubmit()" #passwordForm="ngForm">
+    <div class="p-field">
+      <span class="p-float-label">
+        <input id="emailOrMobile" type="text" pInputText formControlName="emailOrMobile" placeholder=" " autocomplete="off"
+            (focus)="onFocus()"
+            (input)="onInput()" />
+        <label for="emailOrMobile"
+            [ngClass]="{
+                'error-label': forgotPasswordForm.get('emailOrMobile')?.invalid && (forgotPasswordForm.get('emailOrMobile')?.touched || forgotPasswordForm.get('emailOrMobile')?.dirty),
+                'valid-label': forgotPasswordForm.get('emailOrMobile')?.valid && (forgotPasswordForm.get('emailOrMobile')?.touched || forgotPasswordForm.get('emailOrMobile')?.dirty)
+            }">
+            Email or Mobile Number*
+        </label>
+      </span>
+      <div *ngIf="forgotPasswordForm.get('emailOrMobile')?.invalid && 
+                   (forgotPasswordForm.get('emailOrMobile')?.dirty || 
+                    forgotPasswordForm.get('emailOrMobile')?.touched )" class="p-error">
           <small *ngIf="forgotPasswordForm.get('emailOrMobile')?.errors?.['required']">Email or Mobile Number is required.</small>
           <small *ngIf="forgotPasswordForm.get('emailOrMobile')?.errors?.['pattern']">Invalid email or mobile number format.</small>
-        </div>
       </div>
+    </div>  
+        
+
+    <button pButton type="button" label="Send OTP" class="login-btn" (click)="onSendOtpClick($event)"></button>
+  </form>
+</div>
+
     
-      <button pButton type="submit" label="Send OTP"></button>
-    </form>
-    
-    
+<!-- Step 2: OTP  -->
       <div *ngIf="otpSent">
         <form [formGroup]="forgotPasswordForm" (ngSubmit)="verifyOtp()">
           <div class="p-field">
-            <label for="otp">OTP</label>
-            <input id="otp" type="text" pInputText formControlName="otp" />
-            <button pButton type="submit">Verify OTP</button>
-    
+          <span class="p-float-label">
+            <input id="otp" type="text" pInputText formControlName="otp" placeholder="" />
+            <label for="otp">OTP*</label>
+          </span>
             <div *ngIf="forgotPasswordForm.get('otp')?.invalid && 
                          (forgotPasswordForm.get('otp')?.dirty || 
-                          forgotPasswordForm.get('otp')?.touched)">
+                          forgotPasswordForm.get('otp')?.touched)" class="p-error">
               <small *ngIf="forgotPasswordForm.get('otp')?.errors?.['required']">OTP is required.</small>
               <small *ngIf="forgotPasswordForm.get('otp')?.errors?.['pattern']">OTP must be numeric only.</small>
             </div>
+            <div *ngIf="otpInvalid" class="error-message">
+              <small>Invalid OTP. Please try again.</small>
+            </div>  
+          </div>
             
             <div *ngIf="timerActive">
               <p>Resend OTP in: {{ countdown }} seconds</p>
@@ -46,41 +63,44 @@
               pRipple>
               Resend OTP
             </span>
-          </div>
         </form>
-    
-        <div *ngIf="otpVerified">
-          <form [formGroup]="forgotPasswordForm" (ngSubmit)="resetPassword()">
-            <div class="p-field">
-              <label for="password">New Password</label>
-              <input id="password" type="password" pInputText formControlName="password" />
-              <div *ngIf="forgotPasswordForm.get('password')?.invalid && 
-                           (forgotPasswordForm.get('password')?.dirty || 
-                            forgotPasswordForm.get('password')?.touched)">
-                <small *ngIf="forgotPasswordForm.get('password')?.errors?.['required']">Password is required.</small>
-                <small *ngIf="forgotPasswordForm.get('password')?.errors?.['minlength']">
-                  Password must be at least 6 characters long.
-                </small>
+
+<!-- Step 3: New Password  -->
+            <form [formGroup]="forgotPasswordForm" (ngSubmit)="onSubmit()">
+              <div class="p-field">
+                <span class="p-float-label">
+                  <input id="password" type="password" pInputText formControlName="password" placeholder="" />
+                  <label for="password">New Password*</label>
+                </span>
+                <div *ngIf="forgotPasswordForm.get('password')?.invalid && 
+                             (forgotPasswordForm.get('password')?.dirty || 
+                              forgotPasswordForm.get('password')?.touched)" class="p-error">
+                  <small *ngIf="forgotPasswordForm.get('password')?.errors?.['required']">Password is required.</small>
+                  <small *ngIf="forgotPasswordForm.get('password')?.errors?.['minlength']">
+                    Password must be at least 6 characters long.
+                  </small>
+                </div>
               </div>
-            </div>
             
-            <div class="p-field">
-              <label for="confirmPassword">Confirm Password</label>
-              <input id="confirmPassword" type="password" pInputText formControlName="confirmPassword" />
-              <div *ngIf="forgotPasswordForm.get('confirmPassword')?.invalid && 
-                           (forgotPasswordForm.get('confirmPassword')?.dirty || 
-                            forgotPasswordForm.get('confirmPassword')?.touched)">
-                <small *ngIf="forgotPasswordForm.get('confirmPassword')?.errors?.['required']">Confirmation is required.</small>
-                <small *ngIf="forgotPasswordForm.errors?.['passwordMismatch'] && forgotPasswordForm.get('confirmPassword')?.touched">Passwords do not match.</small>
+              <div class="p-field">
+              <span class="p-float-label">
+                <input id="confirmPassword" type="password" pInputText formControlName="confirmPassword" placeholder="" />
+                <label for="confirmPassword">Confirm Password*</label>
+              </span>
+                <div *ngIf="forgotPasswordForm.get('confirmPassword')?.invalid && 
+                             (forgotPasswordForm.get('confirmPassword')?.dirty || 
+                              forgotPasswordForm.get('confirmPassword')?.touched)"class="p-error">
+                  <small *ngIf="forgotPasswordForm.get('confirmPassword')?.errors?.['required']">Confirm password is required.</small>
+                </div>
+                <div *ngIf="forgotPasswordForm.errors?.['passwordMismatch'] && 
+                             (forgotPasswordForm.get('confirmPassword')?.dirty)" class="p-error">
+                  <small>Passwords do not match.</small>
+                </div>
               </div>
-            </div>
-            
-            <button pButton type="submit" label="Reset Password"></button>
-          </form>
-        </div>
+              <button pButton  label="Reset Password" class="login-btn" [disabled]="!forgotPasswordForm.valid"></button>
+            </form>
       </div>
-      </form>
      </div>
     </div>
-  </div>
+  
   
